Routing App: added basic routing links to departments and employees

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
 <h2>This is my router demo application</h2>
+
 <hr />
+
+<h3>Routing and Navigation</h3>
+
+<nav>
+  <a routerLink="/departments" routerLinkActive="active">Departments</a>
+  |
+  <a routerLink="/employees" routerLinkActive="active">Employees</a>
+</nav>
+
+<!-- Routed views go here -->
 <router-outlet></router-outlet>
