--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+nav a {
+  text-decoration: none;
+}
+
+nav a:visited, a:link {
+  color: #607d8b;
+}
+
+nav a.active {
+  color: #039be5;
+}
