Routing App: wildcard and redirecting routes, added homepage and pagenotfound components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,8 @@
 <h3>Routing and Navigation</h3>
 
 <nav>
+  <a routerLink="/" routerLinkActive="active">Home</a>
+  |
   <a routerLink="/departments" routerLinkActive="active">Departments</a>
   |
   <a routerLink="/employees" routerLinkActive="active">Employees</a>
