Routing App: using relative navigation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 <nav>
   <a routerLink="/" routerLinkActive="active">Home</a>
   |
-  <a routerLink="/departments" routerLinkActive="active">Departments</a>
+  <a routerLink="/department-list" routerLinkActive="active">Departments</a>
   |
   <a routerLink="/employees" routerLinkActive="active">Employees</a>
 </nav>
